# jp_learn

./: .env.example  .gitignore  README.md  SPEC.md  jp_learn_spec.md  pyproject.toml
browser_extension/: README.md  background.js  content.js  manifest.json  popup.css  popup.html  popup.js
docs/: release-check-2026-05-17.md  release-checklist.md
jpcorpus/: __init__.py  analysis.py  anime_db.py  anki_export.py  apple_fm_annotate.swift  apple_fm_explain.swift  bangumi.py  cli.py  corpus_export.py  env.py  i18n.py  imported_texts.py  jimaku.py  jlpt.py  lexical_notes.py  llm.py  lyrics.py  models.py  paths.py  report.py  state.py  subtitle.py  tasks.py  texts.py  tokenize.py  user_dictionaries.py  viewer.py  viewer_config.py  viewer_jobs.py  viewer_study.py  viewer_tts.py  zh_dict.py
jpcorpus/viewer_assets/: app.css  app.js  app_ai.js  app_api.js  app_config.js  app_detail.js  app_dom.js  app_examples.js  app_format.js  app_i18n.js  app_layout.js  app_lexical.js  app_maintenance.js  app_reader.js  app_reader_mode.js  app_search.js  app_sources.js  app_storage.js  app_study.js  app_sync.js  app_tts.js  index.html
tests/: test_anime_db.py  test_browser_extension.py  test_cli.py  test_corpus_export.py  test_env.py  test_llm.py  test_lyrics.py  test_report_pipeline.py  test_state.py  test_user_dictionaries.py  test_viewer_assets.py  test_viewer_config.py  test_viewer_jobs.py  test_viewer_study.py  test_viewer_tts.py
tests/fixtures/: sample.srt
tools/: tts_compare.py
