[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "jpcorpus"
version = "0.1.0"
description = "Turn watched Japanese media into a personal JLPT corpus report and Anki deck."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fugashi[unidic-lite]>=1.3.2",
  "genanki>=0.13.1",
  "httpx>=0.27.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[project.scripts]
jpcorpus = "jpcorpus.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
