[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "jpcorpus"
version = "0.1.0"
description = "Turn watched Japanese media and texts into a personal Japanese study corpus."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fugashi[unidic-lite]>=1.3.2",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[project.scripts]
jpcorpus = "jpcorpus.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
